--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 url: https://k9mail.github.io
+title: K-9 Mail
+description: "K-9 Mail is an open source email client focused on making it easy to chew through large volumes of email"
