Change "posted by" line of blog posts

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,3 +2,6 @@ valodim:
     name: Vincent Breitmoser
     email: look@my.amazin.horse
     web: https://github.com/Valodim
+philipwhiuk:
+    name: Philip Whitehouse
+    web: https://github.com/philipwhiuk
