Add release announcement for K-9 Mail 5.200

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,3 +5,6 @@ valodim:
 philipwhiuk:
     name: Philip Whitehouse
     web: https://github.com/philipwhiuk
+cketti:
+    name: cketti
+    web: https://github.com/cketti
