Update the ico manifest file based on the W3C Web App Manifest spec

--- a/assets/ico/manifest.json
+++ b/assets/ico/manifest.json
@@ -1,5 +1,10 @@
 {
- "name": "App",
+ "lang": "en",
+ "dir": "ltr",
+ "name": "K-9 Mail Website",
+ "start_url": ".../../index.html",
+ "description": "Information about K-9, an open source email client",
+ "short_name": "K9Mail",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
