--- a/assets/ico/manifest.json
+++ b/assets/ico/manifest.json
@@ -2,9 +2,9 @@
  "lang": "en",
  "dir": "ltr",
  "name": "K-9 Mail Website",
- "start_url": ".../../index.html",
- "description": "Information about K-9, an open source email client",
- "short_name": "K9Mail",
+ "start_url": "../../index.html",
+ "description": "Information about K-9 Mail, an open source email client",
+ "short_name": "K-9 Mail",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
