Use k9mail.app for site

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://k9mail.github.io
+url: https://k9mail.app
 title: K-9 Mail
 description: "K-9 Mail is an open source email client focused on making it easy to chew through large volumes of email"
 
