Replace 'Related Apps' with link to support forum

--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -18,5 +18,5 @@
   title: Download
   url: /download
 - link:
-  title: Related Apps
-  url: /related
+  title: Support Forum
+  url: https://forum.k9mail.app/
