Small updates for blog layout and css classes

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: K-9 Mail
 description: "K-9 Mail is an open source email client focused on making it easy to chew through large volumes of email"
 url: "https://k9mail.app"
 github: k9mail
+repository: k9mail/k9
 
 # Build settings
 plugins:
