Remove documentation and point to docs.k9mail.app

--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -13,7 +13,7 @@
   url: /blog
 - link:
   title: Documentation
-  url: /documentation
+  url: https://docs.k9mail.app/
 - link:
   title: Download
   url: /download
