Verify domain for Microsoft OAuth

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
 
+include: 
+   - .well-known
 exclude:
    - .sass-cache/
    - .jekyll-cache/
