Add blog post: What’s Happening With the K-9 Blog?

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,3 +11,6 @@ cketti:
 wolf:
     name: Wolf Montwé
     web: https://github.com/wmontwe
+tb-team:
+    name: Team Thunderbird
+    web: https://thunderbird.net/
